<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BIODATA"
        android:textSize="30dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/dataDiriku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_below="@+id/header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_nim" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_nama" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_alamat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_telepon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_email" />

    </LinearLayout>

    <ImageView
        android:id="@+id/fotoku"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dataDiriku"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:src="@drawable/fotoku" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fotoku"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:text="@string/cv_btn"
        android:onClick="lihatCVku"/>

</RelativeLayout>